Name:                ObjectiveJLib
Version:             0.6
Description:         JsLib with Objective-J language extensions
License:             BSD3
License-file:        LICENSE
Author:              Jean Joskin
Maintainer:          jean@joskin.nl
Copyright:           Copyright (c) 2011, Jean Joskin
Homepage:            https://github.com/JeanJoskin/ObjectiveJLib
Stability:           Experimental
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
     hs-source-dirs:    src
     Build-Depends:     base >= 4.2 && <5, parsec >= 3, pretty, array, containers
     Build-tools:       alex
     Exposed-modules:   Language.ObjectiveJLib
                        Language.ObjectiveJLib.AST
                        Language.ObjectiveJLib.Scanner
                        Language.ObjectiveJLib.Parser
                        Language.ObjectiveJLib.Printer
                        Language.ObjectiveJLib.Scanner.Tokens
                        Language.ObjectiveJLib.Scanner.Scanner
                        Language.ObjectiveJLib.Parser.Parser
                        Language.ObjectiveJLib.Parser.Prim
                        Language.ObjectiveJLib.Printer.Pretty
                        Language.ObjectiveJLib.Printer.Util
     Other-modules:     Language.ObjectiveJLib.StringUtil
